@@ -134,14 +134,14 @@ object DigIt_Main: TDigIt_Main
       end
       object tbCaptSep1: TToolButton
         Left = 53
-        Height = 8
+        Height = 26
         Top = 2
         Caption = 'tbCaptSep1'
         Style = tbsSeparator
       end
       object tbCaptSep2: TToolButton
         Left = 113
-        Height = 8
+        Height = 26
         Top = 2
         Caption = 'tbCaptSep2'
         Style = tbsSeparator
@@ -934,7 +934,7 @@ object DigIt_Main: TDigIt_Main
       end
       object tbSepMenu: TToolButton
         Left = 76
-        Height = 8
+        Height = 62
         Top = 0
         AutoSize = True
         Caption = 'tbSepMenu'
@@ -966,7 +966,7 @@ object DigIt_Main: TDigIt_Main
       end
       object tbSepTake: TToolButton
         Left = 444
-        Height = 8
+        Height = 62
         Top = 0
         AutoSize = True
         Caption = 'tbSepTake'
@@ -1040,7 +1040,7 @@ object DigIt_Main: TDigIt_Main
       Wrapable = False
       object tbSepCrop: TToolButton
         Left = 1
-        Height = 8
+        Height = 62
         Top = 0
         Caption = 'tbSepCrop'
         Style = tbsSeparator
@@ -1071,7 +1071,7 @@ object DigIt_Main: TDigIt_Main
       end
       object tbSepClear: TToolButton
         Left = 348
-        Height = 8
+        Height = 62
         Top = 0
         AutoSize = True
         Caption = 'tbSepClear'
@@ -1802,6 +1802,7 @@ object DigIt_Main: TDigIt_Main
       Caption = 'Templates ...'
       Images = imgListMenu
       ImageIndex = 16
+      Visible = False
     end
     object btTemplatesAdd: TSpeedButton
       Left = 148
@@ -1812,6 +1813,7 @@ object DigIt_Main: TDigIt_Main
       Caption = 'Add Template'
       Images = imgListMenu
       ImageIndex = 16
+      Visible = False
     end
   end
   object imgListMain: TImageList
